--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firebase Storage Demo</title>
+  <title>Storage beta</title>
 </head>
+  <div>
+<h1>Bandwidth limit per day 1GB</h1>
+  </div>
 <body>
   <input type="file" id="fileInput" />
   <button onclick="uploadFile()">Upload File</button>
